--- a/src/classes/BookTriggerHandler.cls
+++ b/src/classes/BookTriggerHandler.cls
@@ -4,7 +4,8 @@ public class BookTriggerHandler {
         BookTriggerUtility.updateBookStatusComments(books);
     }
 
-    public void onBeforeUpdate(List<MBMS_Book__c> books) {
-        BookTriggerUtility.notifyApprovers(books);
+    public void onBeforeUpdate(List<MBMS_Book__c> oldBooks, List<MBMS_Book__c> newBooks) {
+        BookTriggerUtility.updatePreviousStatus(oldBooks, newBooks);
+        BookTriggerUtility.notifyApprovers(newBooks);
     }
 }
