--- a/src/classes/MoviePhotoTriggerHandler.cls
+++ b/src/classes/MoviePhotoTriggerHandler.cls
@@ -3,7 +3,8 @@ public class MoviePhotoTriggerHandler {
         MoviePhotoTriggerUtility.updateMoviePhotoStatusComments(moviePhotos);
     }
 
-    public void onBeforeUpdate(List<MBMS_Movie_Photo__c> moviePhotos) {
-        MoviePhotoTriggerUtility.notifyApprovers(moviePhotos);
+    public void onBeforeUpdate(List<MBMS_Movie_Photo__c> oldMoviePhotos, List<MBMS_Movie_Photo__c> newMoviePhotos) {
+        MoviePhotoTriggerUtility.updatePreviousStatus(oldMoviePhotos, newMoviePhotos);
+        MoviePhotoTriggerUtility.notifyApprovers(newMoviePhotos);
     }
 }
