--- a/src/classes/MoviePhotoTriggerHandlerTest.cls
+++ b/src/classes/MoviePhotoTriggerHandlerTest.cls
@@ -40,4 +40,23 @@ private class MoviePhotoTriggerHandlerTest {
         
         System.assertEquals(approversQueue.Id, moviePhoto.OwnerId, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'OwnerId', approversQueue.Id }));
     }
+    
+    @isTest
+    static void triggerShouldUpdatePreviousStatus() {
+        MBMS_Movie_Photo__c moviePhoto = [SELECT MBMS_Status__c
+                                          FROM MBMS_Movie_Photo__c
+                                          LIMIT 1];
+        String expectedPreviousStatus = moviePhoto.MBMS_Status__c;
+        moviePhoto.MBMS_Status__c = Constants.STATUS_REJECTED;
+
+        Test.startTest();
+        update moviePhoto;
+        Test.stopTest();
+
+        moviePhoto = [SELECT MBMS_Previous_Status__c
+                      FROM MBMS_Movie_Photo__c
+                      LIMIT 1];
+        
+        System.assertEquals(expectedPreviousStatus, moviePhoto.MBMS_Previous_Status__c, String.format(Constants.FIELD_SHOULD_BE_PATTERN, new List<String> { 'MBMS_Previous_Status__c', expectedPreviousStatus }));
+    }
 }
