Replace queries by the selector methods

--- a/src/classes/ArtistTriggerHandlerTest.cls
+++ b/src/classes/ArtistTriggerHandlerTest.cls
@@ -60,10 +60,7 @@ private class ArtistTriggerHandlerTest {
         update artist;
         Test.stopTest();
 
-        Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
-                                AND Name = :Constants.APPROVERS_QUEUE
-                                LIMIT 1];
+        Group approversQueue = SObjectsSelector.getApproversQueue();
 
         artist = [SELECT OwnerId
                   FROM MBMS_Artist__c
