--- a/src/classes/BookTriggerUtility.cls
+++ b/src/classes/BookTriggerUtility.cls
@@ -18,14 +18,8 @@ public class BookTriggerUtility {
     }
 
     public static void notifyApprovers(List<MBMS_Book__c> books) {
-        Group approversQueue = [SELECT Id
-                                FROM Group WHERE Type = :Constants.QUEUE_GROUP_TYPE
-                                AND Name = :Constants.APPROVERS_QUEUE
-                                LIMIT 1];
-        
-        List<GroupMember> approvers = [SELECT UserOrGroupId
-                                       FROM GroupMember
-                                       WHERE GroupId = :approversQueue.Id];
+        Group approversQueue = SObjectsSelector.getApproversQueue();
+        List<GroupMember> approvers = SObjectsSelector.getGroupMembersByGroupId(approversQueue.Id);
 
         Set<String> approversIds = new Set<String>();
         
